# git2version

./: Cargo.toml  ChangeLog.txt  README.md
.github/workflows/: ci.yml
src/: ChangeLog.txt  git_helpers.rs  gitinfo.rs  gitinfo_owned.rs  lib.rs  proxy.rs
tests/: git2version.rs
