[package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2021"
name = "git2version"
version = "0.5.0"
description = "This crate provides a way to get the version of the package from git and incorporate it as a constant into your program."
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/git2version"
repository = "https://github.com/smessmer/git2version"
rust-version = "1.66.0"
categories = ["development-tools", "development-tools::build-utils"]
keywords = ["git", "version", "build"]

[dependencies]
konst = "^0.4"
git2 = { version = "^0.20", optional = true }
# TODO Ideally, serde should also be an optional dependency. We only need it for our integration tests.
serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
tempdir = "^0.3"
rand = "^0.9"
serde_json = "^1.0"
git2 = "^0.20"

[features]
default = []

# The `build` feature enables the dependencies that are needed in the `build.rs` script of the proxy crate but not anymore at runtime
build = ["dep:git2"]
